--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,10 +22,44 @@
             </p>
             <button class="btn-primary">Contact us</button>
             </div>
-            
         </div>
+
     </header>
     <main>
+        <section class="previous-failures">
+            <div class="person-image">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="heading">
+                <h2 class="section-title">
+                    My failures of previous years  
+                </h2>
+                <p class="section-description">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock. 
+                    <div class="section-points">
+                        1.Contrary to popular belief, is not simply. <br>
+                        2.Contrary to popular belief. <br>
+                        3.Contrary to popular , is not simply. <br>
+                        4.Contrary to popular belief, is not simply. <br>
+                        5.Contrary to popular simply.
+                    </p>
+            </div>
+    </section>
+    <!-- lower-section -->
+    <section>
+        <div class="lower-heading">
+            <h2>My Plans</h2>
+        </div>
+            <!-- .skills-container>-->
+            <div class="plans-container">
+                <div class="plans">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="plans-title">Web Development</p>
+                    <p class="plans-description">I want to start</p>
+                </div>
+            </div>
+        </section>
+    </section>
         
     </main>
     <footer>
